--- a/src/main/resources/co/edu/uniquindio/agenciaviajes/agenciaviajes/GestionPaqueteTFX.fxml
+++ b/src/main/resources/co/edu/uniquindio/agenciaviajes/agenciaviajes/GestionPaqueteTFX.fxml
@@ -1,20 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="720" prefWidth="1280" style="-fx-background-color: #72C1F2;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.agenciaviajes.agenciaviajes.controlador.PaqueteController">
+<AnchorPane prefHeight="720" prefWidth="1280" style="-fx-background-color: #72C1F2;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.agenciaviajes.agenciaviajes.controlador.PaqueteController">
     <children>
         <HBox prefHeight="686.0" prefWidth="1280.0">
             <children>
@@ -36,19 +25,10 @@
                                 <!-- Puedes agregar más VBoxes para las otras imágenes -->
                             </children>
                         </GridPane>
-                        <TableView maxWidth="550.0" prefHeight="485.0" prefWidth="550.0">
-                            <columns>
-                                <TableColumn prefWidth="118.0" text="Destino" />
-                                <TableColumn prefWidth="107.0" text="Nombre" />
-                                <TableColumn prefWidth="102.0" text="Duracion" />
-                                <TableColumn prefWidth="94.0" text="Precio" />
-                                <TableColumn minWidth="8.0" prefWidth="123.0" text="Cupo" />
-                            </columns>
-                        </TableView>
                         <HBox alignment="CENTER" spacing="10">
                             <children>
-                                <Button style="-fx-background-color: #2ecc71; -fx-text-fill: white; -fx-font-size: 18;" text="Actualizar" />
-                                <Button style="-fx-background-color: #e74c3c; -fx-text-fill: white; -fx-font-size: 18;" text="Borrar" />
+                                <Button fx:id="buttonActualizarPaquete" onAction="#actualizarPaquete" style="-fx-background-color: #2ecc71; -fx-text-fill: white; -fx-font-size: 18;" text="Actualizar" />
+                                <Button fx:id="buttonBorrarPaquete" onAction="#borrarPaquete" style="-fx-background-color: #e74c3c; -fx-text-fill: white; -fx-font-size: 18;" text="Borrar" />
                             </children>
                         </HBox>
                     </children>
@@ -56,38 +36,33 @@
                 <VBox alignment="CENTER" prefHeight="720.0" prefWidth="640.0" spacing="20.0">
                     <children>
                         <Label style="-fx-text-fill: white; -fx-font-size: 24;" text="Crear/Editar Destino" />
-                        <MenuButton maxWidth="400.0" mnemonicParsing="false" text="Destino">
+<!--                        <MenuButton fx:id="menuButtonDestinos" onAction="#actualizarDestinos" maxWidth="400.0" mnemonicParsing="false" text="Destino">-->
+                        <MenuButton fx:id="menuButtonDestinos" onMouseClicked="#actualizarDestinos" maxWidth="400.0" mnemonicParsing="false" text="Destino">
                             <items>
-                                <MenuItem mnemonicParsing="false" text="Action 1" />
-                                <MenuItem mnemonicParsing="false" text="Action 2" />
+                                <!-- Agrega más destinos según sea necesario -->
                             </items>
                         </MenuButton>
-                        <TextField maxWidth="400.0" minWidth="-Infinity" promptText="Nombre" style="-fx-font-size: 18;" />
-                        <TextField maxWidth="400.0" promptText="Duración" />
-                        <TextArea maxWidth="400.0" minHeight="100" minWidth="-Infinity" prefWidth="400.0" promptText="Servicios adicionales" style="-fx-font-size: 18; -fx-pref-height: 100;" />
-                        <TextField maxWidth="400.0" promptText="Precio" />
-                        <MenuButton maxWidth="400.0" mnemonicParsing="false" text="Cupo">
-                            <items>
-                                <MenuItem mnemonicParsing="false" text="Action 1" />
-                                <MenuItem mnemonicParsing="false" text="Action 2" />
-                            </items>
-                        </MenuButton>
+                        <TextField fx:id="nombrePaquete" maxWidth="400.0" minWidth="-Infinity" promptText="Nombre" style="-fx-font-size: 18;" />
+                        <TextField fx:id="duracionPaquete" maxWidth="400.0" promptText="Duración" />
+                        <TextArea fx:id="servAdicionalesPaquete" maxWidth="400.0" minHeight="100" minWidth="-Infinity" prefWidth="400.0" promptText="Servicios adicionales" style="-fx-font-size: 18; -fx-pref-height: 100;" />
+                        <TextField fx:id="precioPaquete" maxWidth="400.0" promptText="Precio" />
+                        <TextField fx:id="cupoMaximo" maxWidth="400.0" promptText="Cupo" />
                         <HBox maxWidth="400.0" prefHeight="39.0" prefWidth="200.0">
                             <children>
-                                <DatePicker prefHeight="39.0" prefWidth="200.0" promptText="Fecha inicio" />
-                                <DatePicker maxWidth="200.0" promptText="Fecha final" />
+                                <DatePicker fx:id="fechaInicio" prefHeight="39.0" prefWidth="200.0" promptText="Fecha inicio" />
+                                <DatePicker fx:id="fechaFinal" maxWidth="200.0" promptText="Fecha final" />
                             </children>
                         </HBox>
                         <HBox alignment="CENTER" spacing="10">
                             <children>
-                                <Button style="-fx-background-color: #2ecc71; -fx-text-fill: white; -fx-font-size: 18;" text="Guardar" />
-                                <Button style="-fx-background-color: #e74c3c; -fx-text-fill: white; -fx-font-size: 18;" text="Cancelar" />
+                                <Button fx:id="buttonGuardarPaquete" onAction="#guardarPaquete" style="-fx-background-color: #2ecc71; -fx-text-fill: white; -fx-font-size: 18;" text="Guardar" />
+                                <Button fx:id="buttonCancelar" onAction="#cancelarPeticion" style="-fx-background-color: #e74c3c; -fx-text-fill: white; -fx-font-size: 18;" text="Cancelar" />
                             </children>
                         </HBox>
                     </children>
                 </VBox>
             </children>
         </HBox>
-        <Button layoutX="10.0" layoutY="669.0" style="-fx-background-color: #0597F2; -fx-text-fill: white; -fx-font-size: 18;" text="Atras" />
+        <Button fx:id="buttonAtras" layoutX="10.0" layoutY="669.0" onAction="#atras" style="-fx-background-color: #0597F2; -fx-text-fill: white; -fx-font-size: 18;" text="Atras" />
     </children>
 </AnchorPane>
